force-app/main/default/objects/Account/fields/ABN__c.field-meta.xml
<CustomField>
    <fullName>ABN__c</fullName>
    <description>ABN Number</description>
    <externalId>true</externalId>
    <label>ABN</label>
    <length>11</length>
    <type>Text</type>
</CustomField>