force-app/main/default/objects/Account/fields/ABN_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>ABN_Effective_Date__c</fullName>
    <description>Effective date of ABN number. The date the ABN became applicable to this record. Example: if a provider was set up on the same date as an ACO, and shares the same ABN, the effective date of provider and ACO will match. Providers added at a later date with the same ABN as the ACO will have a more recent effective date.</description>
    <label>ABN Effective Date</label>
    <type>Date</type>
</CustomField>