force-app/main/default/objects/Account/fields/ABN_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>ABN_Entity_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>ABN Entity Name</label>
    <referenceTo>Registered_ABN_Name__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>