force-app/main/default/objects/Account/fields/ABN_Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>ABN_Entity_Type__c</fullName>
    <description>PROVIDER_ABNS.ABN_ENTITY_TYPE - these values match the ABR register entity types</description>
    <label>ABN Entity Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>