force-app/main/default/objects/Account/fields/ABNEntityName__c.field-meta.xml
<CustomField>
    <fullName>ABNEntityName__c</fullName>
    <formula>ABN_Entity_Name__r.ABN_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ABN Entity Name</label>
    <type>Text</type>
</CustomField>