force-app/main/default/objects/Account/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <description>Generated ID  field</description>
    <displayFormat>{00000}</displayFormat>
    <label>Account Number</label>
    <type>AutoNumber</type>
</CustomField>