force-app/main/default/objects/Account/fields/ACO_Status__c.field-meta.xml
<CustomField>
    <fullName>ACO_Status__c</fullName>
    <description>CALCULATED. SF Field. Status of ACO. Automated</description>
    <label>ACO Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>