force-app/main/default/objects/Account/fields/Administrator_Liquidator_Record_Exists__c.field-meta.xml
<CustomField>
    <fullName>Administrator_Liquidator_Record_Exists__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Administrator Liquidator Record Exists?</label>
    <type>Checkbox</type>
</CustomField>