force-app/main/default/objects/Account/fields/Allow_Updates__c.field-meta.xml
<CustomField>
    <fullName>Allow_Updates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Updates</label>
    <type>Checkbox</type>
</CustomField>