force-app/main/default/objects/Account/fields/ARBN__c.field-meta.xml
<CustomField>
    <fullName>ARBN__c</fullName>
    <description>INCORP_ARBN Aged Care Organisation ARBN where Incorporation ID Type = IAN</description>
    <label>ARBN</label>
    <length>9</length>
    <type>Text</type>
</CustomField>