force-app/main/default/objects/Account/fields/Correction__c.field-meta.xml
<CustomField>
    <fullName>Correction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Correction</label>
    <type>Checkbox</type>
</CustomField>