force-app/main/default/objects/Account/fields/Count_of_Associated_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Associated_Accounts__c</fullName>
    <description>This has been created to trigger the validation rules.</description>
    <label>Count of Associated Accounts</label>
    <summaryForeignKey>Account_Relationship__c.Account_From_Id__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>