force-app/main/default/objects/Account/fields/Estimate_Of_RAD_Liabilities__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Of_RAD_Liabilities__c</fullName>
    <formula>Value_Of_RAD_Balances__c +  RAD_Balances_Of_Services_Transferred_In__c -  RAD_Balances_Of_Services_Transferred_Out__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimate Of RAD Liabilities</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>