force-app/main/default/objects/Account/fields/GPMS_ABN_Branch__c.field-meta.xml
<CustomField>
    <fullName>GPMS_ABN_Branch__c</fullName>
    <formula>ABN_Entity_Name__r.ABN_Branch__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ABN Branch</label>
    <type>Text</type>
</CustomField>