force-app/main/default/objects/Account/fields/GPMS_ACMPS_Notified__c.field-meta.xml
<CustomField>
    <fullName>GPMS_ACMPS_Notified__c</fullName>
    <description>Identify this provider is saved in the ACMPS or not</description>
    <label>ACMPS Notified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>