force-app/main/default/objects/Account/fields/GPMS_Exact_Duplicate_Match__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Exact_Duplicate_Match__c</fullName>
    <description>Populates with Account Record type when Account record is created.</description>
    <label>Exact Duplicate Match</label>
    <length>255</length>
    <type>Text</type>
</CustomField>