force-app/main/default/objects/Account/fields/GPMS_ProspectivePortalACO__c.field-meta.xml
<CustomField>
    <fullName>GPMS_ProspectivePortalACO__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for differentiating ACO created though prospective provider registration from the portal</description>
    <label>Prospective Portal ACO</label>
    <type>Checkbox</type>
</CustomField>