force-app/main/default/objects/Account/fields/Grants_Based_Provider__c.field-meta.xml
<CustomField>
    <fullName>Grants_Based_Provider__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the provider is a grants based provider, as such Activity details etc. Will be populated through a GovGPS extract in a later step</description>
    <label>Grants Based Provider</label>
    <type>Checkbox</type>
</CustomField>