force-app/main/default/objects/Account/fields/GRE__c.field-meta.xml
<CustomField>
    <fullName>GRE__c</fullName>
    <description>Provider Government Related Entity Type related to the provider&apos;s ABN</description>
    <label>GRE Flag</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>