force-app/main/default/objects/Account/fields/GST_Registered__c.field-meta.xml
<CustomField>
    <fullName>GST_Registered__c</fullName>
    <description>Response from ABR interface</description>
    <label>GST Registered</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>