force-app/main/default/objects/Account/fields/Incorporated_Body__c.field-meta.xml
<CustomField>
    <fullName>Incorporated_Body__c</fullName>
    <description>Incorporated Body</description>
    <formula>IF (Incorporation_ID__c  = &quot;&quot;, &quot;N&quot;,
IF ( CONTAINS( Text( Incorporated_Under__c ), &quot;Govern&quot; ),&quot;T&quot;, &quot;Y&quot;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incorporated Body</label>
    <type>Text</type>
</CustomField>