force-app/main/default/objects/Account/fields/Incorporated_Under__c.field-meta.xml
<CustomField>
    <fullName>Incorporated_Under__c</fullName>
    <description>INCORP_SPECIFIC_CODE, INCORP_SPECIFIC_CODE. ACO Incorporated Under list</description>
    <label>Incorporated Under</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Incorporation_ID_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Aboriginal Communities Act 1979 (WA)</fullName>
            </value>
            <value>
                <fullName>Aboriginal Land Act 1991 (QLD)</fullName>
            </value>
            <value>
                <fullName>Aboriginal Land Rights (Northern Territory) Act 1976</fullName>
            </value>
            <value>
                <fullName>Aboriginal Land Rights Act 1983 (NSW)</fullName>
            </value>
            <value>
                <fullName>Anglican Church of Australia (Bodies Corporate) Act 1938 (NSW)</fullName>
            </value>
            <value>
                <fullName>Anglican Church of Australia Act 1895 (Queensland)</fullName>
            </value>
            <value>
                <fullName>Anglican Church of Australia Trust Property Act 1917</fullName>
            </value>
            <value>
                <fullName>Anglican Church of Australia Trust Property Act 1917 (NSW)</fullName>
            </value>
            <value>
                <fullName>Anglican Church of Australia Trust Property Act 1928 (ACT)</fullName>
            </value>
            <value>
                <fullName>Anglican Trusts Corporations Act 1884 (VIC)</fullName>
            </value>
            <value>
                <fullName>Anglican Welfare Agency Act 1997 (VIC)</fullName>
            </value>
            <value>
                <fullName>Associations Act 2008 (NT)</fullName>
            </value>
            <value>
                <fullName>Associations Incorporation Act 1964 (TAS)</fullName>
            </value>
            <value>
                <fullName>Associations Incorporation Act 1981 (QLD)</fullName>
            </value>
            <value>
                <fullName>Associations Incorporation Act 1981 (VIC)</fullName>
            </value>
            <value>
                <fullName>Associations Incorporation Act 1984 (NSW)</fullName>
            </value>
            <value>
                <fullName>Associations Incorporation Act 1985 (SA)</fullName>
            </value>
            <value>
                <fullName>Associations Incorporation Act 1987 (WA)</fullName>
            </value>
            <value>
                <fullName>Associations Incorporation Act 1991 (ACT)</fullName>
            </value>
            <value>
                <fullName>Associations Incorporation Act 2009 (NSW)</fullName>
            </value>
            <value>
                <fullName>Benevolent Society (Reconstitution) Act 1998 (NSW)</fullName>
            </value>
            <value>
                <fullName>Brotherhood of St. Laurence (Incorporation) Act 1971</fullName>
            </value>
            <value>
                <fullName>Canberra Institute of Technology Act 1987 ACT</fullName>
            </value>
            <value>
                <fullName>Charitable Collections Act (1934)</fullName>
            </value>
            <value>
                <fullName>Churches of Christ, Scientist, Incorporation Act 1964 (QLD)</fullName>
            </value>
            <value>
                <fullName>Community Services (Aborigines) Act 1984 (QLD)</fullName>
            </value>
            <value>
                <fullName>Companies Act 1899</fullName>
            </value>
            <value>
                <fullName>Companies Act 1961</fullName>
            </value>
            <value>
                <fullName>Co-operatives Act 1992 (NSW)</fullName>
            </value>
            <value>
                <fullName>Co-operatives Act 1997 (QLD)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>