force-app/main/default/objects/Account/fields/Incorporation_ID__c.field-meta.xml
<CustomField>
    <fullName>Incorporation_ID__c</fullName>
    <description>CORPORATE_IDENTIFIER ACO Incorporation ID</description>
    <label>Incorporation ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>