force-app/main/default/objects/Account/fields/Incorporation_ID_Type__c.field-meta.xml
<CustomField>
    <fullName>Incorporation_ID_Type__c</fullName>
    <description>IDENTIFIER_TYPE ACO Incorporation ID Type</description>
    <inlineHelpText>Taken to be Incorporated should only be selected if you are a Government Organisation</inlineHelpText>
    <label>Incorporation ID Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACN</fullName>
            </value>
            <value>
                <fullName>ARBN</fullName>
            </value>
            <value>
                <fullName>IAN</fullName>
            </value>
            <value>
                <fullName>ICN</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Not Incorporated</fullName>
            </value>
            <value>
                <fullName>Taken to be Incorporated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>