force-app/main/default/objects/Account/fields/Incorporation_Name__c.field-meta.xml
<CustomField>
    <fullName>Incorporation_Name__c</fullName>
    <description>CURRENT_NAME ACO Incorporation Name</description>
    <label>Incorporation Name</label>
    <length>130</length>
    <type>Text</type>
</CustomField>