force-app/main/default/objects/Account/fields/Incorporation_Status__c.field-meta.xml
<CustomField>
    <fullName>Incorporation_Status__c</fullName>
    <description>ACO Incorporation Status</description>
    <label>Incorporation Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Incorporation_ID_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Association Strike Off Status</fullName>
            </value>
            <value>
                <fullName>Deregistered</fullName>
            </value>
            <value>
                <fullName>Dormant</fullName>
            </value>
            <value>
                <fullName>External Administration</fullName>
            </value>
            <value>
                <fullName>Non-Active</fullName>
            </value>
            <value>
                <fullName>Not available</fullName>
            </value>
            <value>
                <fullName>Not registered</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Removed</fullName>
            </value>
            <value>
                <fullName>Reserved</fullName>
            </value>
            <value>
                <fullName>Strike-off action in progress</fullName>
            </value>
            <value>
                <fullName>To be advised</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>