force-app/main/default/objects/Account/fields/Incorporation_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Incorporation_Status_Date__c</fullName>
    <description>ACO Incorporation Status Date</description>
    <label>Incorporation Status Date</label>
    <type>Date</type>
</CustomField>