force-app/main/default/objects/Account/fields/Incorporation_Type__c.field-meta.xml
<CustomField>
    <fullName>Incorporation_Type__c</fullName>
    <description>INCORP_TYPE_CODE ACO Incorporation Type list</description>
    <label>Incorporation Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Incorporation_ID_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Australian Proprietary Company</fullName>
            </value>
            <value>
                <fullName>Australian Public Company</fullName>
            </value>
            <value>
                <fullName>Australian Registered Body</fullName>
            </value>
            <value>
                <fullName>Foreign Company (Overseas)</fullName>
            </value>
            <value>
                <fullName>Own Legislation</fullName>
            </value>
            <value>
                <fullName>BLANK</fullName>
            </value>
            <value>
                <fullName>Incorporated Association</fullName>
            </value>
            <value>
                <fullName>Indigenous Corporation</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Local Government</fullName>
            </value>
            <value>
                <fullName>State Government</fullName>
            </value>
            <value>
                <fullName>State Government Statutory Authority</fullName>
            </value>
            <value>
                <fullName>Territory Government</fullName>
            </value>
            <value>
                <fullName>Not Incorporated</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>