force-app/main/default/objects/Account/fields/Integration_ID__c.field-meta.xml
<CustomField>
    <fullName>Integration_ID__c</fullName>
    <externalId>true</externalId>
    <label>Integration ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>