force-app/main/default/objects/Account/fields/Is_Approved_Provider__c.field-meta.xml
<CustomField>
    <fullName>Is_Approved_Provider__c</fullName>
    <label>Is also an Approved Provider?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>