force-app/main/default/objects/Account/fields/Is_NotEditable_Application__c.field-meta.xml
<CustomField>
    <fullName>Is_NotEditable_Application__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is NotEditable( Application)</label>
    <type>Checkbox</type>
</CustomField>