force-app/main/default/objects/Account/fields/Last_ABR_Check__c.field-meta.xml
<CustomField>
    <fullName>Last_ABR_Check__c</fullName>
    <label>Last ABR Check</label>
    <type>Date</type>
</CustomField>