force-app/main/default/objects/Account/fields/MyAgeCareLink__c.field-meta.xml
<CustomField>
    <fullName>MyAgeCareLink__c</fullName>
    <formula>$CustomMetadata.EmailNotificationSetting__mdt.Send_Email.MyAgeCareLink__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MyAgeCareLink</label>
    <type>Text</type>
</CustomField>