force-app/main/default/objects/Account/fields/Name_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Name_Effective_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Aligns with the date of record creation</description>
    <label>Name Effective Date</label>
    <type>Date</type>
</CustomField>