force-app/main/default/objects/Account/fields/NAPS_Service_Id__c.field-meta.xml
<CustomField>
    <fullName>NAPS_Service_Id__c</fullName>
    <description>This field is displayed in QI email template when the QI is submitted.</description>
    <label>NAPS Service Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>