force-app/main/default/objects/Account/fields/Organisation_Type__c.field-meta.xml
<CustomField>
    <fullName>Organisation_Type__c</fullName>
    <description>Organisation Type</description>
    <label>Organisation Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Purpose__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Private Incorporated Body</fullName>
            </value>
            <value>
                <fullName>Publicly Listed Company</fullName>
            </value>
            <value>
                <fullName>Charitable</fullName>
            </value>
            <value>
                <fullName>Community Based</fullName>
            </value>
            <value>
                <fullName>Religious</fullName>
            </value>
            <value>
                <fullName>Religious/Charitable</fullName>
            </value>
            <value>
                <fullName>Local Government</fullName>
            </value>
            <value>
                <fullName>State Government</fullName>
            </value>
            <value>
                <fullName>Territory Government</fullName>
            </value>
            <value>
                <fullName>Private Non-Incorporated Entity</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Funding approved but suspended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>