force-app/main/default/objects/Account/fields/Organisation_Type_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Organisation_Type_Effective_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Organisation Type Effective Date</label>
    <type>Date</type>
</CustomField>