force-app/main/default/objects/Account/fields/Party_ID__c.field-meta.xml
<CustomField>
    <fullName>Party_ID__c</fullName>
    <description>Primary key to link the Provider Record to GovGPS Record</description>
    <label>Party ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>