force-app/main/default/objects/Account/fields/PreviousReportingPeriodDueDt__c.field-meta.xml
<CustomField>
    <fullName>PreviousReportingPeriodDueDt__c</fullName>
    <description>This field is referenced in Classic Email Templates for sending QI Submission Reminders to the Providers</description>
    <label>PreviousReportingPeriodDueDt</label>
    <type>Date</type>
</CustomField>