force-app/main/default/objects/Account/fields/PreviousReportingPeriodName__c.field-meta.xml
<CustomField>
    <fullName>PreviousReportingPeriodName__c</fullName>
    <description>This field is referenced in Classic Email Templates for sending QI Submission Reminders to the Providers</description>
    <label>PreviousReportingPeriodName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>