force-app/main/default/objects/Account/fields/Procurement_Based_Provider__c.field-meta.xml
<CustomField>
    <fullName>Procurement_Based_Provider__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the provider is a procurement based provider, and as such the Contract Details will have to be manually entered in a later step</description>
    <label>Procurement Based Provider</label>
    <type>Checkbox</type>
</CustomField>