force-app/main/default/objects/Account/fields/Prospective_Provider__c.field-meta.xml
<CustomField>
    <fullName>Prospective_Provider__c</fullName>
    <description>Likely to become a provider in the future</description>
    <label>Prospective Provider</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Purpose__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>