force-app/main/default/objects/Account/fields/Provider_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Provider_Approval_Status__c</fullName>
    <description>UI Only. NAPS.APPROVALS.CARE_TYPE_APPROVAL_STATUS. Status of Approved Provider, Assessment Services</description>
    <label>Provider Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Intention to Apply</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Pending Lapse</fullName>
            </value>
            <value>
                <fullName>Intention to Revoke</fullName>
            </value>
            <value>
                <fullName>Application Withdrawn</fullName>
            </value>
            <value>
                <fullName>Lapsed</fullName>
            </value>
            <value>
                <fullName>Approval Ceased</fullName>
            </value>
            <value>
                <fullName>Revoked by Commission</fullName>
            </value>
            <value>
                <fullName>Revoked by Provider</fullName>
            </value>
            <value>
                <fullName>Revoked by Dept</fullName>
            </value>
            <value>
                <fullName>Currently Approved</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>Approved (Not in Force)</fullName>
            </value>
            <value>
                <fullName>Currently Approved (Not in Force)</fullName>
            </value>
            <value>
                <fullName>Approved with dependencies</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
            <value>
                <fullName>Not Approved (Threshold Criteria Not Met)</fullName>
            </value>
            <value>
                <fullName>Taken to be approved under the Aged Care Act 1997, s.8-6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>