force-app/main/default/objects/Account/fields/Provider_State__c.field-meta.xml
<CustomField>
    <fullName>Provider_State__c</fullName>
    <description>ReadOnly  PROVIDER_STATE</description>
    <label>State</label>
    <length>3</length>
    <type>Text</type>
</CustomField>