force-app/main/default/objects/Account/fields/Provider_Status_RO__c.field-meta.xml
<CustomField>
    <fullName>Provider_Status_RO__c</fullName>
    <formula>TEXT(Provider__r.Provider_Approval_Status__c)</formula>
    <label>Provider Status</label>
    <type>Text</type>
</CustomField>