force-app/main/default/objects/Account/fields/QISubmissionDetails__c.field-meta.xml
<CustomField>
    <fullName>QISubmissionDetails__c</fullName>
    <description>This field is used to display the date on which QI is submitted,</description>
    <label>QISubmissionDetails</label>
    <type>Date</type>
</CustomField>