force-app/main/default/objects/Account/fields/RAD_Balances_Of_Services_Transferred_In__c.field-meta.xml
<CustomField>
    <fullName>RAD_Balances_Of_Services_Transferred_In__c</fullName>
    <label>RAD Balances Of Services Transferred In</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>