force-app/main/default/objects/Account/fields/Same_As_Physical_Address__c.field-meta.xml
<CustomField>
    <fullName>Same_As_Physical_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Same As Physical Address</label>
    <type>Checkbox</type>
</CustomField>