force-app/main/default/objects/Account/fields/SearchString__c.field-meta.xml
<CustomField>
    <fullName>SearchString__c</fullName>
    <formula>Name+&apos; - &apos; +  Integration_ID__c</formula>
    <label>SearchString</label>
    <type>Text</type>
</CustomField>