force-app/main/default/objects/Account/fields/Service_Record_View__c.field-meta.xml
<CustomField>
    <fullName>Service_Record_View__c</fullName>
    <label>Service Record View</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Act Service</fullName>
            </value>
            <value>
                <fullName>Assessment Service</fullName>
            </value>
            <value>
                <fullName>Non-Act Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>