force-app/main/default/objects/Account/fields/ServiceNames__c.field-meta.xml
<CustomField>
    <fullName>ServiceNames__c</fullName>
    <description>This field is referenced in Classic Email Templates for sending QI Submission Reminders to the Providers. This field consists name of all the services linked to a Provider</description>
    <label>ServiceNames</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>