force-app/main/default/objects/Account/fields/ServicePortalURL__c.field-meta.xml
<CustomField>
    <fullName>ServicePortalURL__c</fullName>
    <description>Field to fetch service provider url</description>
    <formula>SUBSTITUTE(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)), &apos;salesforce.com/&apos;, &apos;site.com/serviceproviderportal&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ServicePortalURL</label>
    <type>Text</type>
</CustomField>