force-app/main/default/objects/Account/fields/Third_Party_Organisation_Search_String__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Organisation_Search_String__c</fullName>
    <formula>Name+&apos; - &apos;+ Integration_ID__c +&apos; - &apos;+&apos;ABN: &apos;+ ABN__c+&apos; - &apos;+&apos;ACO Name: &apos;+  Incorporation_Name__c</formula>
    <label>Third Party Organisation Search String</label>
    <type>Text</type>
</CustomField>